--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,16 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^11.0.0",
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0",
+    "framer-motion": "^11.18.2",
+    "lucide-react": "^0.544.0",
+    "openai": "^6.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^2.12.7",
-    "tesseract.js": "^5.1.0"
+    "recharts": "^2.15.4",
+    "tesseract.js": "^5.1.1"
   },
   "devDependencies": {
-    "@types/node": "^22.5.0",
+    "@types/express": "^5.0.3",
+    "@types/node": "^22.18.8",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
+    "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
